# bfv-hacker-checker

./: .gitignore  LICENSE  README.md  bfv-hacker-checker.spec  blubb.py  build.bat  build.py  config.ini  config.linux.ini  config.release.ini  form.ui  icon.spec  main.py  main.spec  pyproject.toml  set_version.py
lib/: AboutDialog.py  ActivationKey.py  App.py  Config.py  GlobalInjector.py  ListenerThread.py  Logger.py  MainWindow.py  NpImgUtil.py  Ui_MainWindow.py  Util.py  Widget.py  common.py  sadsadasd.py  types.py  version.py
lib/thread/: DetectPlayerNameThread.py  PrepareThread.py  UserInputListenerThread.py
lib/ui/: AboutDialog.py  AbstractBaseWindow.py  AppWindow.py  DebugWindow.py  ExceptionDialog.py
lib/ui_generated/: UI_AppWindow.py  UI_DebugWindow.py  Ui_AppWindow.py  Ui_DebugWindow.py
lib/util/: FileUtil.py  ImageUtil.py  OcrUtil.py  WindowUtil.py
scripts/: build.py  set_version.py  zip_dist.py
src/: App.py  GlobalInjectorModule.py  QApplicationWrap.py  main.py  version.py
src/base/: Hotkey.py  Loglevel.py
src/service/: ConfigService.py  DetectPlayerNameService.py  LoggingService.py  PrepareService.py
src/thread/: BaseThread.py  DetectPlayerNameThread.py  PrepareThread.py  UserInputListenerThread.py
src/ui/: AboutDialog.py  AbstractBaseWindow.py  AppWindow.py  DebugWindow.py  ExceptionDialog.py
src/ui_generated/: Ui_AppWindow.py  Ui_DebugWindow.py
src/util/: FileUtil.py  ImageUtil.py  StringUtil.py  WindowUtil.py
ui/: app_window.ui  debug_window.ui  form.ui  mainwindow.py  ui.pyproject
