[tool.poetry]
name = "bfv-hacker-checker"
version = "0.1.1"
description = ""
authors = ["Albrecht Nitsche <albrechtnitsche@mail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
poethepoet = "^0.19.0"
pillow = "^9.4.0"
pyqtwebengine = "^5.15.6"
pynput = "^1.7.6"
pywin32 = "^306"
opencv-python = "^4.7.0.72"
numpy = "^1.24.2"
pytesseract = "^0.3.10"
injector = "^0.20.1"
humanfriendly = "^10.0"
pyqt5 = "^5.15.9"
pyqt5-tools = "^5.15.9.3.3"
pyqtdarktheme = "^2.1.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
gen-ui = "pyuic5 form.ui -o lib/UI_MainWindow.py"
app = "python main.py"
build = "python build.py"
set-version = "python set_version.py"


